# hiviewdfx_hiview_lite

./: BUILD.gn  README.md  README_zh.md  bundle.json  hiview_cache.c  hiview_config.h  hiview_def.h  hiview_file.c  hiview_file.h  hiview_service.c  hiview_util.c  hiview_util.h
blackbox/: BUILD.gn  blackbox_adapter.c  blackbox_common.c  blackbox_common.h  blackbox_core.c  blackbox_detector.c  blackbox_detector.h
blackbox/interfaces/native/innerkits/: blackbox.h  blackbox_adapter.h
blackbox/interfaces/native/kits/: blackbox.h  blackbox_adapter.h
blackbox/platform/bes2600/: blackbox_system_adapter.c
blackbox/platform/hi3861/: blackbox_system_adapter.c
hidumper_lite/: BUILD.gn  hidumper.c
hidumper_lite/mini/: BUILD.gn  hidumper_adapter.c  hidumper_core.c
hidumper_lite/mini/interfaces/native/kits/: hidumper_adapter.h
