# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/ndk/ndk.gni")

static_library("blackbox") {
    sources = [
        "blackbox_core.c",
        "blackbox_common.c",
        "blackbox_detector.c",
    ]
    defines = []
    cflags = [ "-Wall" ]
    deps = []
    include_dirs = [
        "//base/hiviewdfx/hiview_lite/blackbox",
        "//base/hiviewdfx/hiview_lite/blackbox/interfaces/native/kits",
        "//base/hiviewdfx/hiview_lite",
        "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
    ]
    if (board_name == "hispark_pegasus") {
        sources += [
            "platform/hi3861/blackbox_system_adapter.c",
        ]
        defines += ["LOG_ROOT_PATH=\"/\""]
        defines += ["FAULT_LOG_PATH=\"/kernel_fault.log\""]
        defines += ["PLATFORM_HI3861"]
        include_dirs += []
    } else {
        sources += [
            "platform/bes2600/blackbox_system_adapter.c",
        ]
        include_dirs += [
            "//kernel/liteos_m/kernel/include",
            "//kernel/liteos_m/utils",
            "//kernel/liteos_m/kernel/arch/include",
            "//kernel/liteos_m/kal/posix/include",
        ]
        defines += ["LOG_ROOT_PATH=\"/data\""]
        defines += ["FAULT_LOG_PATH=\"/data/kernel_fault.log\""]
    }
}